      not file.cpp.h.

    - In RPCGEN tests, ignore stderr messages from older versions of
      rpcgen on some versions of Mac OS X.
   
    - Fix typos in man page descriptions of Tag() and Package(), and in
      the scons-time man page.

    - Fix documentation of SConf.CheckLibWithHeader and other SConf methods.

    - Update documentation of SConscript(variant_dir) usage.

  From Jonas Olsson:

    - Print the warning about -j on Windows being potentially unreliable if
      the pywin32 extensions are unavailable or lack file handle operations.

  From Jim Randall:

    - Fix the env.WhereIs() method to expand construction variables.

  From Rogier Schouten:

    - Enable building of shared libraries with the Bordand ilink32 linker.



RELEASE 1.0.0 - Sat, 09 Aug 2008 12:19:44 -0700

  From Luca Falavigna:

    - Fix SCons man page indentation under Debian's man page macros.

  From Steven Knight:

    - Clarify the man page description of the SConscript(src_dir) argument.

    - User's Guide updates:

       -  Document the BUILD_TARGETS, COMMAND_LINE_TARGETS and
          DEFAULT_TARGETS variables.

       -  Document the AddOption(), GetOption() and SetOption() functions.

       -  Document the Requires() function; convert to the Variables
          object, its UnknownOptions() method, and its associated
          BoolVariable(), EnumVariable(), ListVariable(), PackageVariable()
          and PathVariable() functions.
          
       -  Document the Progress() function.

       -  Reorganize the chapter and sections describing the different
          types of environments and how they interact.  Document the
          SetDefault() method.  Document the PrependENVPath() and
          AppendENVPath() functions.

       -  Reorganize the command-line arguments chapter.  Document the
          ARGLIST variable.

       -  Collect some miscellaneous sections into a chapter about
          configuring build output.

    - Man page updates:
