@@ -70,7 +70,7 @@ env = Environment(CPPPATH = [".", r'%(python_include_dir)s'],
                   SWIGCXXFILESUFFIX = "_wrap.cpp",
                   LDMODULEPREFIX='_',
                   LDMODULESUFFIX='%(_dll)s',
-                  FRAMEWORKSFLAGS='%(python_frameworks_flags)s')
+                  FRAMEWORKS='%(python_frameworks_flags)s')
 
 import sys
 if sys.version[0] == '1':
