@@ -70,7 +70,7 @@ env = Environment(SWIGFLAGS='-python',
                   CPPPATH='%(python_include_dir)s/',
                   LDMODULEPREFIX='%(ldmodule_prefix)s',
                   LDMODULESUFFIX='%(_dll)s',
-                  FRAMEWORKSFLAGS='%(python_frameworks_flags)s',
+                  FRAMEWORKS='%(python_frameworks_flags)s',
                   )
 
 import sys
